@@ -315,6 +315,7 @@ typedef struct	noderes {
 #define	MOM_CHKPT_POST		2	/* post checkpoint call returned */
 #define MOM_HAS_NODEFILE	4	/* Mom wrote job PBS_NODEFILE */
 #define MOM_NO_PROC		8	/* no procs found for job */
+#define MOM_HAS_TMPDIR		16	/* Mom made a tmpdir */
 #endif	/* MOM */
 
 /*
